# aws-ecs-fargate-rds-template

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
app/: .env.sample  Dockerfile.dev  Dockerfile.prod  database.py  main.py  pyproject.toml
db/: .env.sample
db/mariadb/init.d/: init.sql
docs/: architecture.drawio  stack-sample.yml
notes/: architecture.drawio
scripts/: delete-stack.sh  deploy-app.sh  deploy-ecr.sh  deploy.sh
templates/: app.yml  ecr.yml
templates/single/: ecr.yml
