[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nukopy <pytwbf201830@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.7"
python-dotenv = "^0.17.0"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
mysqlclient = "^2.0.3"
alembic = "^1.5.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
